chore(gui): fix layout issue with app version link (navbar) for medium devices and improve css

--- a/droidlinguist-web/src/main/less/translation.less
+++ b/droidlinguist-web/src/main/less/translation.less
@@ -1,4 +1,10 @@
 
+.app-version{
+	top: 0em;
+	margin-left: -12px; //to reduce the extra space (of 15px) after the brand
+	margin-right: 12px;
+}
+
 .translation-mode {
 	height: 100%;
 	overflow: hidden;
@@ -84,6 +90,8 @@
 	padding: 20px;
 	background-color: #f5f5f5;
 	border-right: 1px solid #eee;
+
+	.hidden-xs();
 }
 
 .center-content{
